src/objects/Glxy_Accrual__c.object
<CustomObject>
    <description>Load the Year Accruals in this Object ...</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DataCategory__c</fullName>
        <label>Data Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Price Index</fullName>
                </value>
                <value>
                    <fullName>Lease Project</fullName>
                </value>
                <value>
                    <fullName>Lump Sum</fullName>
                </value>
                <value>
                    <fullName>Step Rent</fullName>
                </value>
                <value>
                    <fullName>Lease Project Lump Sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataPaymentID__c</fullName>
        <label>Payment ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataRecordID__c</fullName>
        <label>Data Record ID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataRecordURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp;  DataRecordID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Record URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <defaultValue>Text(YEAR(TODAY()))</defaultValue>
        <label>Fiscal Year</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease Project</label>
        <referenceTo>Glxy_LeaseProjects__c</referenceTo>
        <relationshipLabel>Galaxy Accruals</relationshipLabel>
        <relationshipName>Galaxy_Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipLabel>Galaxy Accruals</relationshipLabel>
        <relationshipName>Galaxy_Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Galaxy Accrual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FiscalYear__c</columns>
        <columns>Region__c</columns>
        <columns>DataCategory__c</columns>
        <columns>Lease__c</columns>
        <columns>LeaseProject__c</columns>
        <columns>Amount__c</columns>
        <columns>DataPaymentID__c</columns>
        <columns>DataRecordID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>Accrual ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Galaxy Accruals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>